New telegram link

--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -39,7 +39,7 @@
 
         <p class='text-muted mt-4'>Вы можете просить аккаунты за своих друзей, если они стесняются написать мне :) </p>
         <script type="text/javascript">(function() {var script=document.createElement("script");script.type="text/javascript";script.async =true;script.src="//telegram.im/widget-button/index.php?id=@torianik_george";document.getElementsByTagName("head")[0].appendChild(script);})();</script>
-        <a href="https://telegram.im/@torianik_george" target="_blank" class="col-6 telegramim_button telegramim_shadow telegramim_pulse d-block mx-auto" style="font-size:30px;width:446px;background:#27A5E7;box-shadow:1px 1px 5px #27A5E7;color:#FFFFFF;border-radius:100px;" title=""><i></i> Написать нам</a>
+        <a href="https://t.me/joinchat/AAAAAFXlAr9Y2mo7lzzq1A" target="_blank" class="col-6 telegramim_button telegramim_shadow telegramim_pulse d-block mx-auto" style="font-size:30px;width:446px;background:#27A5E7;box-shadow:1px 1px 5px #27A5E7;color:#FFFFFF;border-radius:100px;" title=""><i></i> Написать нам</a>
     </div>
 
 
@@ -63,7 +63,7 @@
 
         <p class='text-muted mt-4'>До сих пор не решились, надо ли оно вам? Напишите мне, я докажу что оно вам надо.</p>
         <script type="text/javascript">(function() {var script=document.createElement("script");script.type="text/javascript";script.async =true;script.src="//telegram.im/widget-button/index.php?id=@torianik_george";document.getElementsByTagName("head")[0].appendChild(script);})();</script>
-        <a href="https://telegram.im/@torianik_george" target="_blank" class="col-6 telegramim_button telegramim_shadow telegramim_pulse d-block mx-auto" style="font-size:30px;width:446px;background:#27A5E7;box-shadow:1px 1px 5px #27A5E7;color:#FFFFFF;border-radius:100px;" title=""><i></i> Написать нам</a>
+        <a href="https://t.me/joinchat/AAAAAFXlAr9Y2mo7lzzq1A" target="_blank" class="col-6 telegramim_button telegramim_shadow telegramim_pulse d-block mx-auto" style="font-size:30px;width:446px;background:#27A5E7;box-shadow:1px 1px 5px #27A5E7;color:#FFFFFF;border-radius:100px;" title=""><i></i> Написать нам</a>
     </div> 
 </div>
 
