--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -67,13 +67,13 @@
 
     <div class="row mt-2 col-12">
         <div class="progress col-8 mx-auto">
-        {% if k1 == 'Nan' and k2 == 'Nan' %} 
+        {% if k1 == '&infin;' and k2 == '&infin;' %} 
             <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
             <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
-        {% elif k1 == 'Nan' %}
+        {% elif k1 == '&infin;' %}
             <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 1%"></div>
             <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 99%"></div>
-        {% elif k2 == 'Nan' %} 
+        {% elif k2 == '&infin;' %} 
             <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 99%"></div>
             <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 1%"></div>
         {% elif True  %}
