--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -5,10 +5,10 @@
     {{ super() }}
     
     <script type='text/javascript'>
-        FIRST_GIRL_ID = {{ first_girl.id }} 
-        SECOND_GIRL_ID = {{ second_girl.id }}
-        CONTEST_ID = {{ contest_id }}
-        PRIVATE_KEY = {{ private_key }}
+        FIRST_GIRL_ID = {{ first_girl.id }};
+        SECOND_GIRL_ID = {{ second_girl.id }};
+        CONTEST_ID = {{ contest_id }};
+        PRIVATE_KEY = "{{ private_key }}";
     </script>
     
     <script type='text/javascript' src='/resources/scripts/contest.js'></script>
