--- a/templates/rating.html.j2
+++ b/templates/rating.html.j2
@@ -34,12 +34,21 @@
 
                 <tbody>
                     {% for girl in girls %}
+                    {% if girl.rating > (girls|length) / 2 %}
+                    <tr>
+                    <th scope='row'>{{ girl.rating }}</th>
+                    <td>***</td>
+                    <td>***</a>
+                    <td>{{ girl.ELO_rounded }}</td>
+                    </tr>
+                    {% else %}
                     <tr>
                     <th scope='row'>{{ girl.rating }}</th>
                     <td>{{ girl.name }}</td>
                     <td><a href='http://www.instagram.com/{{ girl.instagram }}'>{{ girl.instagram }}</a>
                     <td>{{ girl.ELO_rounded }}</td>
                     </tr>
+                    {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
