--- a/deploy/meta/chanvoter.conf.j2
+++ b/deploy/meta/chanvoter.conf.j2
@@ -1,10 +1,13 @@
 server {
     listen 80;
-    listen [::]:80;
-    server_name chanvoter.{{ HOST }};
 
     location / {
        include uwsgi_params;
-       uwsgi_pass localhost:8001;
+       uwsgi_pass 0.0.0.0:8001;
+    }
+
+    location /resources {
+        alias {{ STATIC_DIR }};
+        autoindex on;
     }
 }
