Another step to rewrite this code

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class='card-footer text-muted'>
-                    {% if contest.id in opened_bets %}
+                    {% if contest.id in rated_contests %}
                     Вы уже сделали ставку
                     {% else %}
                     Вы еще не сделали ставку
