--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -50,7 +50,7 @@
                     <div class='card-text mt-3'>
                         <h4>
                             До конца соревнования осталось 
-                            <span class='countdown badge badge-primary' endtime='{{ contest.end.isoformat() }}'></span>
+                            <span class='countdown badge badge-primary' endtime='{{ contest.end  }}'></span>
                         </h4>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <div class='card-text mt-3'>
                         <h4>
                             До начала соревнования осталось 
-                            <span class='badge badge-primary waiting-countdown' begintime='{{ contest.begin.isoformat() }}'></span>
+                            <span class='badge badge-primary waiting-countdown' begintime='{{ contest.begin }}'></span>
                         </h4>
                     </div>
                 </div>
