Restore vote system. Add new girls

--- a/templates/bets.html.j2
+++ b/templates/bets.html.j2
@@ -29,7 +29,7 @@
                     </td>
                     <td>{{ contest.first_girl.name }}</td>
                     <td>{{ contest.second_girl.name }}</td>
-                    <td> x{{ contest.k1 }} : x{{ contest.k2 }} </td>
+                    <td> x{{ contest.coeff1|round(2) }} : x{{ contest.coeff2|round(2) }} </td>
                     <td>
                         {% if contest.id in rated_contests  %}
                         Сделали ставку
