--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -9,7 +9,7 @@
     <div class='jumbotron text-center'>
         <div class='row'>
             <div class='img-wrapper col-lg-6 col-sm-12 d-block mx-auto'>
-                <img  class='img rounded' style='width: 100%; height: auto;' src='http://www.izbrannoe.com/upload/resize_cache/iblock/98c/705_391_2/98c13dcb42bf7427cef55b1c16771529.jpg'>
+                <img  class='img rounded' style='width: 100%; height: auto;' src='/resources/index-quote.jpg'>
             </div>
         </div>
 
