--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -75,7 +75,7 @@
 
     <!-- Alerts form r there -->
 
-    <div class="modal" tabindex="-1" role="dialog" id='success-alert'>
+    <div class="modal fade" tabindex="-1" role="dialog" id='success-alert'>
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <div class="modal" tabindex="-1" role="dialog" id='wrong-key-alert'>
+    <div class="modal fade" tabindex="-1" role="dialog" id='wrong-key-alert'>
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -116,7 +116,7 @@
       </div>
     </div>
 
-    <div class="modal" tabindex="-1" role="dialog" id='extra-vote-alert'>
+    <div class="modal fade" tabindex="-1" role="dialog" id='extra-vote-alert'>
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -137,7 +137,7 @@
       </div>
     </div>
  
-    <div class="modal" tabindex="-1" role="dialog" id='less-money-alert'>
+    <div class="modal fade" tabindex="-1" role="dialog" id='less-money-alert'>
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
